# learning

angular/tour-of-heroes/: README.md  package-lock.json  package.json
codility/: test1.js  test2.js  test3.js
cpp/boost/: CMakeLists.txt  install_boost.sh  main.cpp
cpp/cypher containers/: CMakeLists.txt  Cypher.cpp  Cypher.h  main  main.cpp
cpp/helloworld-vscode/: CMakeLists.txt
cpp/sudoku/: CMakeLists.txt  main.cpp  test.cpp
cpp/sudoku/classes/: Board.cpp  Board.h  Files.cpp  Files.h  Sudoku.cpp  Sudoku.h  board.cpp  board.h  files.h  sudoku.cpp  sudoku.h
cpp/sudoku/tests/: hard1-solution.txt  hard1.txt  impossible.txt  test.cpp  test1-solution.txt
cpp/weather/: CMakeLists.txt  Weather.cpp  Weather.h  install.sh  main.cpp
crypto/hash/: index.js  package.json
crypto/key-derivation/: index.js  package-lock.json  package.json
crypto/key-exchange/: index.js  package-lock.json  package.json
crypto/mac/: package.json
crypto/random-number/: index.js  package-lock.json  package.json
crypto/shamirs/: index.js  package-lock.json  package.json
css/1.1 getting started/: index.html  styles.css
css/1.2 structure/: index.html  styles.css
css/1.3 biography/: index.html  styles.css
helloworld-cpp-vscode/: main.cpp  person.cpp  person.h
localllmtest/: .gitignore  package.json
next-app/: package.json
rust/: .gitignore  02_Variables.rs  03_Constants.rs  04_Strings.rs  Datatypes.rs  Variables.rs
veramo/: .gitignore  database.sqlite  package.json  sql.sh  tsconfig.json
vue-basics/: app.js  index.html  main.css
vue-components/: app.js  index.html
(+152 files in other folders)
